--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   curved_navigation_bar: ^1.0.6
+  omni_datetime_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
