--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.2
   curved_navigation_bar: ^1.0.6
   omni_datetime_picker: ^2.1.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
